<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:layout_marginBottom="12dp"
        android:text="@string/txtTitle"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/txtMonthly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtMonthly"
        android:layout_width="365dp"
        android:layout_height="47dp"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:ems="10"
        android:hint="@string/txtMonthly"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtYears"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/txtYears"
        android:layout_width="365dp"
        android:layout_height="47dp"
        android:layout_below="@+id/txtMonthly"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:ems="10"
        android:hint="@string/txtYears"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtLoan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMonthly" />

    <EditText
        android:id="@+id/txtLoan"
        android:layout_width="365dp"
        android:layout_height="47dp"
        android:layout_below="@+id/txtYears"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/txtLoan"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtYears" />

    <Button
        android:id="@+id/btnInterest"
        android:layout_width="342dp"
        android:layout_height="61dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="14dp"
        android:text="@string/btnInterest"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imgDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoan" />

    <ImageView
        android:id="@+id/imgDescription"
        android:layout_width="325dp"
        android:layout_height="208dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInterest"
        app:srcCompat="@drawable/mortgage" />


</androidx.constraintlayout.widget.ConstraintLayout>